--- a/local/src_v6/components/base/forms/form_1/form_row/style.scss
+++ b/local/src_v6/components/base/forms/form_1/form_row/style.scss
@@ -37,6 +37,13 @@
     }
   }
 
+  .radio {
+
+    .lk & {
+      margin-bottom: 15px;
+    }
+  }
+
   .single-check,
   .group-check {
     padding-top: 10px;
