--- a/local/src_v6/core/util/svg/style.scss
+++ b/local/src_v6/core/util/svg/style.scss
@@ -999,6 +999,32 @@
   }
 }
 
+@mixin svg-lk-delete {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2018%2018%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M6%206l3%203m0%200l3%203M9%209l3-3M9%209l-3%203m3%205A8%208%200%201%201%209%201a8%208%200%200%201%200%2016z%22%20stroke%3D%22%23515855%22%2F%3E%3C%2Fsvg%3E');
+  width: 18px;
+  height: 18px;
+}
+
+.svg-lk-delete {
+
+  &:before {
+    @include svg-lk-delete;
+  }
+}
+
+@mixin svg-lk-edit {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2018%2018%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5%2015l1%201%201%201L17%207l-6-6L1%2011l1%201%201%201m2%202l-2%202-1-1-1-1%202-2m2%202l-2-2%22%20stroke%3D%22%23515855%22%2F%3E%3C%2Fsvg%3E');
+  width: 18px;
+  height: 18px;
+}
+
+.svg-lk-edit {
+
+  &:before {
+    @include svg-lk-edit;
+  }
+}
+
 @mixin svg-element-rating-star-active {
   background-image:url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2219%22%20height%3D%2217.781%22%20viewBox%3D%220%200%2019%2017.781%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill%3A%23f26101%3Bfill-rule%3Aevenodd%7D%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cpath%20id%3D%22Star_Filled_Icon%22%20data-name%3D%22Star%20Filled%20Icon%22%20class%3D%22cls-1%22%20d%3D%22M1047.35%20330.786a1.216%201.216%200%200%201-.71-.227%201.176%201.176%200%200%201-.45-1.265l1.38-5.029-4.14-3.274a1.161%201.161%200%200%201-.39-1.287%201.189%201.189%200%200%201%201.08-.817l5.33-.271%201.9-4.865a1.221%201.221%200%200%201%202.26%200l1.9%204.865%205.33.271a1.189%201.189%200%200%201%201.08.817%201.177%201.177%200%200%201-.39%201.287l-4.14%203.274%201.38%205.029a1.176%201.176%200%200%201-.45%201.265%201.234%201.234%200%200%201-1.37.036l-4.47-2.842-4.47%202.842a1.232%201.232%200%200%201-.66.191z%22%20transform%3D%22translate(-1042.97%20-313)%22%2F%3E%3C%2Fsvg%3E');
   width: 19px;
