--- a/local/templates/.default/lk-basket.html
+++ b/local/templates/.default/lk-basket.html
@@ -908,7 +908,7 @@
 											</div>
 																						<div class="card-links-line-2">
 																							<div class="card-links-line-2__list">
-																								<div class="card-links-line-2__item">
+																								<div class="card-links-line-2__item"><a class="card-links-line-2__delete-btn delete-btn" href="#">Удалить из корзины</a>
 																									<div class="card-links-line-2__item-row">
 																										<div class="card-links-line-2__item-col card-links-line-2__item-col--pic"><img class="card-links-line-2__img" src="img/tmp/card-links-line-2-01.png" alt="img/tmp/card-links-line-2-01.png"></div>
 																										<div class="card-links-line-2__item-col card-links-line-2__item-col--text">
@@ -927,7 +927,7 @@
 																										</div>
 																									</div>
 																								</div>
-																								<div class="card-links-line-2__item">
+																								<div class="card-links-line-2__item"><a class="card-links-line-2__delete-btn delete-btn" href="#">Удалить из корзины</a>
 																									<div class="card-links-line-2__item-row">
 																										<div class="card-links-line-2__item-col card-links-line-2__item-col--pic"><img class="card-links-line-2__img" src="img/tmp/card-links-line-2-01.png" alt="img/tmp/card-links-line-2-01.png"></div>
 																										<div class="card-links-line-2__item-col card-links-line-2__item-col--text">
@@ -946,7 +946,7 @@
 																										</div>
 																									</div>
 																								</div>
-																								<div class="card-links-line-2__item">
+																								<div class="card-links-line-2__item"><a class="card-links-line-2__delete-btn delete-btn" href="#">Удалить из корзины</a>
 																									<div class="card-links-line-2__item-row">
 																										<div class="card-links-line-2__item-col card-links-line-2__item-col--pic"><img class="card-links-line-2__img" src="img/tmp/card-links-line-2-02.png" alt="img/tmp/card-links-line-2-02.png"></div>
 																										<div class="card-links-line-2__item-col card-links-line-2__item-col--text">
