--- a/local/templates/.default/lk-address.html
+++ b/local/templates/.default/lk-address.html
@@ -923,13 +923,19 @@
 										<div class="accordion lk-accordion">
 											<div class="acc-group" id="accordion-7">
 												<div class="panel">
-													<div class="acc-heading"><a class="link svg-arrow2 collapsed" data-toggle="collapse" href="#accordion-11"><span>01. Проспект мира, 12 кв. 310</span></a></div>
+													<div class="acc-heading">
+														<div class="btns-wrap d-none d-md-block"><a class="delete-btn" href="#">Удалить</a><a class="edit-btn" href="#">Редактировать</a></div><a class="link svg-arrow2 collapsed" data-toggle="collapse" href="#accordion-11"><span>01. Проспект мира, 12 кв. 310</span></a>
+													</div>
 													<div class="collapse" id="accordion-11">
-														<div class="acc-body">1</div>
+														<div class="acc-body">text
+															<div class="btns-wrap d-block d-md-none"><a class="delete-btn" href="#">Удалить</a><a class="edit-btn" href="#">Редактировать</a></div>
+														</div>
 													</div>
 												</div>
 												<div class="panel">
-													<div class="acc-heading"><a class="link svg-arrow2 collapsed" data-toggle="collapse" href="#accordion-12"><span>02. ул. Победителей, 38 кв. 44</span></a></div>
+													<div class="acc-heading">
+														<div class="btns-wrap d-none d-md-block"><a class="delete-btn" href="#">Удалить</a><a class="edit-btn" href="#">Редактировать</a></div><a class="link svg-arrow2 collapsed" data-toggle="collapse" href="#accordion-12"><span>02. ул. Победителей, 38 кв. 44</span></a>
+													</div>
 													<div class="collapse" id="accordion-12">
 														<div class="acc-body">
 															<div class="lk-address-info">
@@ -945,11 +951,14 @@
 																	</div>
 																</div>
 															</div>
+															<div class="btns-wrap d-block d-md-none"><a class="delete-btn" href="#">Удалить</a><a class="edit-btn" href="#">Редактировать</a></div>
 														</div>
 													</div>
 												</div>
 												<div class="panel">
-													<div class="acc-heading"><a class="link svg-arrow2 collapsed" data-toggle="collapse" href="#accordion-13"><span>03. ул. Захарова, 77 кв. 12</span></a></div>
+													<div class="acc-heading">
+														<div class="btns-wrap d-none d-md-block"><a class="delete-btn" href="#">Удалить</a></div><a class="link svg-arrow2 collapsed" data-toggle="collapse" href="#accordion-13"><span>03. ул. Захарова, 77 кв. 12</span></a>
+													</div>
 													<div class="collapse" id="accordion-13">
 														<div class="acc-body">
 															<div class="form-address lk-form">
@@ -1016,11 +1025,11 @@
 																						<div class="controls col-12"></div>
 																					</div>
 																				</div>
-																				<div class="col-md-5 col-12">
+																				<div class="col-12">
 																					<!-- row-->
 																					<div class="form-group mb-0">
 																						<div class="col-12 btn-wrap">
-																																							<button class="btn btn-primary btn_submit with-icon icon-right toReg" id="form-address-submit" type="button"><span>зарегистрироваться</span><span class="icon"></span></button>
+																																							<button class="btn btn-primary btn_submit with-icon icon-right toReg" id="form-address-submit" type="button"><span>сохранить данные</span><span class="icon"></span></button><a class="btn-reset" href="#">Отменить редактирование</a>
 																						</div>
 																					</div>
 																				</div>
@@ -1078,6 +1087,7 @@
 																	</script>
 																</div>
 															</div>
+															<div class="btns-wrap d-block d-md-none"><a class="delete-btn" href="#">Удалить</a><a class="edit-btn" href="#">Редактировать</a></div>
 														</div>
 													</div>
 												</div>
