--- a/local/src_v6/components/pages/lk-address/content/index.pug
+++ b/local/src_v6/components/pages/lk-address/content/index.pug
@@ -4,12 +4,21 @@
       #accordion-7.acc-group
         .panel
           .acc-heading
+            .btns-wrap.d-none.d-md-block
+              a(href="#").delete-btn Удалить
+              a(href="#").edit-btn Редактировать
             a.link.svg-arrow2(data-toggle='collapse', href='#accordion-11', class='collapsed')
               span 01. Проспект мира, 12 кв. 310
           .collapse(id='accordion-11', class='')
-            .acc-body 1
+            .acc-body text
+              .btns-wrap.d-block.d-md-none
+                a(href="#").delete-btn Удалить
+                a(href="#").edit-btn Редактировать
         .panel
           .acc-heading
+            .btns-wrap.d-none.d-md-block
+              a(href="#").delete-btn Удалить
+              a(href="#").edit-btn Редактировать
             a.link.svg-arrow2(data-toggle='collapse', href='#accordion-12', class='collapsed')
               span 02. ул. Победителей, 38 кв. 44
           .collapse(id='accordion-12', class='')
@@ -33,8 +42,13 @@
                     .lk-address-info__item
                       span.lk-address-info__prop Почтовый индекс:&ensp;
                       span.lk-address-info__mean 988 234 223 00
+              .btns-wrap.d-block.d-md-none
+                a(href="#").delete-btn Удалить
+                a(href="#").edit-btn Редактировать
         .panel
           .acc-heading
+            .btns-wrap.d-none.d-md-block
+              a(href="#").delete-btn Удалить
             a.link.svg-arrow2(data-toggle='collapse', href='#accordion-13', class='collapsed')
               span 03. ул. Захарова, 77 кв. 12
           .collapse(id='accordion-13', class='')
@@ -82,15 +96,16 @@
                               .input-wrap
                                 input#form_address_ADDRESS.form-control.input-with-icon.input-with-icon--post(type='text', name='form_address_ADDRESS', placeholder='Почтовый индекс', value='', required='')
                             .controls.col-12
-                        .col-md-5.col-12
+                        .col-12
                           // row
                           .form-group.mb-0
                             .col-12.btn-wrap
                               +btn-primary({
                                   type: 'button',
                                   className: 'btn_submit with-icon icon-right toReg',
-                                  text: '<span>зарегистрироваться</span><span class="icon"></span>'
+                                  text: '<span>сохранить данные</span><span class="icon"></span>'
                               })(id='form-address-submit')
+                              a(href='#').btn-reset Отменить редактирование
                   script.
                       !function () {
                           'use strict';
@@ -139,3 +154,6 @@
                               validOnButton();
                           });
                       }();
+              .btns-wrap.d-block.d-md-none
+                a(href="#").delete-btn Удалить
+                a(href="#").edit-btn Редактировать
